# study_repo

./: .gitignore  README.md
cmake/: .gitignore  README.md
cmake/Step1/: CMakeLists.txt
cmake/Step1/MathFunctions/: CMakeLists.txt
cmake/Step1/Tutorial/: CMakeLists.txt  Tutorial.cxx
cmake/Step10/SimpleTest/: CMakeLists.txt
cmake/Step10/TutorialProject/Tests/: CMakeLists.txt  TestMathFunctions.cxx
cmake/Step11/SimpleTest/: CMakeLists.txt
cmake/Step2/: Exercise1.cmake  Exercise2.cmake  Exercise3.cmake
cmake/Step3/: CMakeLists.txt  CMakePresets.json
cmake/Step3/MathFunctions/: MathFunctions.cxx
cmake/Step3/Tutorial/: Tutorial.cxx
cmake/Step4/: CMakePresets.json
cmake/Step4/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
cmake/Step4/Tutorial/: CMakeLists.txt
cmake/Step5/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
cmake/Step5/Tutorial/: Tutorial.cxx
cmake/Step6/: CMakeLists.txt
cmake/Step6/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
cmake/Step7/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
cmake/Step8/: CMakeLists.txt
cmake/Step8/Tests/: CMakeLists.txt
cmake/Step9/: CMakeLists.txt
cmake/Step9/cmake/: TutorialConfig.cmake
cpp/: README.md
cpp/Chapter01/: Chapter01.sln
cpp/Chapter01/Lecture01/: Lecture1.cpp  Lecture1.vcxproj
cpp/Chapter01/Lecture02/: Lecture2.cpp  Lecture2.vcxproj
cpp/Chapter01/Lecture03/: Lecture3.cpp  Lecture3.vcxproj
cpp/Chapter01/Lecture04/: Lecture4.cpp  Lecture4.vcxproj
cpp/Chapter01/Lecture05/: Lecture5.cpp  Lecture5.vcxproj
cpp/Chapter01/Lecture06/: Lecture6.cpp  Lecture6.vcxproj
cpp/Chapter01/Lecture07/: Lecture7.cpp  Lecture7.vcxproj
cpp/Chapter01/Lecture08/: Lecture8.cpp  Lecture8.vcxproj
cpp/Chapter01/Lecture09/: Lecture9.cpp  Lecture9.vcxproj
cpp/Chapter01/Lecture10/: Lecture10.cpp  Lecture10.vcxproj
cpp/Chapter01/Lecture11/: Lecture11.cpp  Lecture11.vcxproj
cpp/Chapter01/Lecture12/: Lecture12.cpp  Lecture12.vcxproj  add.h  my_work.h
cpp/Chapter01/Lecture13/: Lecture13.cpp  Lecture13.vcxproj
cpp/Chapter01/Lecture14/: Lecture14.cpp  Lecture14.vcxproj
cpp/Chapter02/: Chapter02.sln
cpp/Chapter02/Lecture01/: Lecture01.cpp  Lecture01.vcxproj
cpp/Chapter02/Lecture02/: Lecture02.cpp  Lecture02.vcxproj
cpp/Chapter02/Lecture03/: Lecture03.cpp  Lecture03.vcxproj
cpp/Chapter02/Lecture04/: Lecture04.cpp  Lecture04.vcxproj
cpp/Chapter02/Lecture05/: Lecture05.cpp  Lecture05.vcxproj
cpp/Chapter02/Lecture06/: Lecture06.cpp  Lecture06.vcxproj
cpp/Chapter02/Lecture07/: Lecture07.cpp  Lecture07.vcxproj
cpp/Chapter02/Lecture08/: Lecture08.cpp  Lecture08.vcxproj
cpp/Chapter02/Lecture09/: Lecture09.cpp  Lecture09.vcxproj  MY_CONSTANTS.h
cpp/Chapter03/: Chapter03.sln
cpp/Chapter03/Lecture01/: Lecture01.cpp  Lecture01.vcxproj
cpp/Chapter03/Lecture02/: Lecture02.cpp  Lecture02.vcxproj
cpp/Chapter03/Lecture03/: Lecture03.cpp  Lecture03.vcxproj
cpp/Chapter03/Lecture04/: Lecture04.cpp  Lecture04.vcxproj
cpp/Chapter03/Lecture05/: Lecture05.cpp  Lecture05.vcxproj
cpp/Chapter03/Lecture06/: Lecture06.cpp  Lecture06.vcxproj
cpp/Chapter03/Lecture07/: Lecture07.cpp  Lecture07.vcxproj
cpp/Chapter03/Lecture08/: Lecture08.cpp  Lecture08.vcxproj
cpp/Chapter03/Lecture09/: Lecture09.cpp  Lecture09.vcxproj
cpp/Chapter04/: Chapter04.sln
cpp/Chapter04/Lecture01/: Lecture01.cpp  Lecture01.vcxproj
cpp/Chapter04/Lecture02/: Lecture02.cpp  Lecture02.vcxproj  MyConstants.cpp  MyConstants.h  test.cpp
cpp/Chapter04/Lecture03/: Lecture03.cpp  Lecture03.vcxproj
cpp/Chapter04/Lecture04/: Lecture04.cpp  Lecture04.vcxproj
cpp/Chapter04/Lecture05/: Lecture05.cpp  Lecture05.vcxproj
cpp/Chapter04/Lecture06/: Lecture06.cpp  Lecture06.vcxproj
cpp/Chapter04/Lecture07/: Lecture07.cpp  Lecture07.vcxproj
cpp/Chapter04/Lecture08/: Lecture08.cpp  Lecture08.vcxproj
cpp/Chapter04/Lecture09/: Lecture09.cpp  Lecture09.vcxproj
cpp/Chapter04/Lecture10/: Lecture10.cpp  Lecture10.vcxproj
cpp/Chapter05/: Chapter05.sln
cpp/Chapter05/Lecture01/: Lecture01.cpp  Lecture01.vcxproj
cpp/Chapter05/Lecture02/: Lecture02.cpp  Lecture02.vcxproj
cpp/Chapter05/Lecture03/: Lecture03.cpp  Lecture03.vcxproj
cpp/Chapter05/Lecture04/: Lecture04.cpp  Lecture04.vcxproj
cpp/Chapter05/Lecture05/: Lecture05.cpp  Lecture05.vcxproj
cpp/Chapter05/Lecture06/: Lecture06.cpp  Lecture06.vcxproj
cpp/Chapter05/Lecture07/: Lecture07.cpp  Lecture07.vcxproj
cpp/Chapter05/Lecture08/: Lecture08.cpp  Lecture08.vcxproj
cpp/Chapter05/Lecture09/: Lecture09.cpp  Lecture09.vcxproj
cpp/Chapter05/Lecture10/: Lecture10.cpp  Lecture10.vcxproj
cpp/Chapter06/: Chapter06.sln
cpp/Chapter06/Lecture01/: Lecture01.cpp  Lecture01.vcxproj
cpp/Chapter06/Lecture02/: Lecture02.cpp  Lecture02.vcxproj
cpp/Chapter06/Lecture03/: Lecture03.cpp  Lecture03.vcxproj
cpp/Chapter06/Lecture04/: Lecture04.cpp  Lecture04.vcxproj
cpp/Chapter06/Lecture05/: Lecture05.cpp  Lecture05.vcxproj
cpp/Chapter06/Lecture06/: Lecture06.cpp  Lecture06.vcxproj
cpp/Chapter06/Lecture07/: Lecture07.cpp  Lecture07.vcxproj
cpp/Chapter06/Lecture07a/: Lecture07a.cpp  (+1 more)
cpp/Chapter07/: Chapter07.sln
cpp/Chapter08/: Chapter08.sln
cpp/Chapter09/: Chapter09.sln
cpp/Chapter10/: Chapter10.sln
cpp/Chapter11/: Chapter11.sln
cpp/Chapter12/: Chapter12.sln
cpp/Chapter13/: Chapter13.sln
cpp/Chapter14/: Chapter14.sln
cpp/Chapter15/: Chapter15.sln
cpp/Chapter16/: Chapter16.sln
cpp/Chapter17/: Chapter17.sln
cpp/Chapter18/: Chapter18.sln
cpp/Chapter19/: Chapter19.sln
docs/: COMMIT_FORMAT.md  COMMIT_TEMPLATE.md  README_TEMPLATE.md
opencv/: README.md
opencv/0_using_opencv_with_gcc_and_cmake/: CMakeLists.txt
opencv/1_The_Core_Functionality/5_changing_the_contrast_and_brightness/: CMakeLists.txt  change_contrast_brightness.cpp
opencv/1_getting_started_with_images/: display_image.cpp
opencv/2_Image_Processing/0_Basic/1_random_generator_and_text/: CMakeLists.txt  random_generator_and_text.cpp
slam/: README.md
slam/ch02/: CMakeLists.txt  helloSLAM  libHelloSLAM.cpp  libHelloSLAM.h
slam/ch03/visualize/: CMakeLists.txt
(+435 files in other folders)
