# TODO1: Set the minimum required version of CMake to be 3.23
cmake_minimum_required(VERSION 3.23)
# TODO2: Create a project named Tutorial
project(Tutorial)
# TODO11: Add the Tutorial subdirectory to the project
add_subdirectory(Tutorial)
# TODO13: Add the MathFunctions subdirectory to the project
add_subdirectory(MathFunctions)
